--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "jest": "^27.5.1"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": ["src/index.js"]
   }
 }
